antlr/Go/pipe4_parser.go
// Code generated from Pipe4Parser.g4 by ANTLR 4.9.2. DO NOT EDIT.

package parser // Pipe4Parser

import (
	"fmt"
	"reflect"
	"strconv"

	"github.com/antlr/antlr4/runtime/Go/antlr"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = reflect.Copy
var _ = strconv.Itoa

var literalNames = []string{
	"", "'interface'", "'struct'", "'parser'", "'import'", "", "'('", "')'",
	"'{'", "'}'", "'['", "']'", "'='", "','", "';'", "':'", "'.'", "'++'",
	"'--'", "':='", "'...'", "'||'", "'&&'", "'=='", "'!='", "'<'", "'<='",
	"'>'", "'>='", "'|'", "' / '", "'!'", "' + '", "' -'", "' - '", "'-'",
	"' * '",
}
var symbolicNames = []string{
	"", "INTERFACE", "STRUCT", "PARSER", "IMPORT", "IDENTIFIER", "L_PAREN",
	"R_PAREN", "L_CURLY", "R_CURLY", "L_BRACKET", "R_BRACKET", "ASSIGN", "COMMA",
	"SEMI", "COLON", "DOT", "PLUS_PLUS", "MINUS_MINUS", "DECLARE_ASSIGN", "ELLIPSIS",
	"LOGICAL_OR", "LOGICAL_AND", "EQUALS", "NOT_EQUALS", "LESS", "LESS_OR_EQUALS",
	"GREATER", "GREATER_OR_EQUALS", "OR", "DIV", "EXCLAMATION", "PLUS", "UNARY_MINUS",
	"MINUS", "MINUS_IN_NAME", "STAR", "DECIMAL_LIT", "BINARY_LIT", "OCTAL_LIT",
	"HEX_LIT", "FLOAT_LIT", "DECIMAL_FLOAT_LIT", "HEX_FLOAT_LIT", "RUNE_LIT",
	"BYTE_VALUE", "OCTAL_BYTE_VALUE", "HEX_BYTE_VALUE", "LITTLE_U_VALUE", "BIG_U_VALUE",
	"RAW_STRING_LIT", "INTERPRETED_STRING_LIT", "WS", "COMMENT", "TERMINATOR",
	"LINE_COMMENT",
}

var ruleNames = []string{
	"sourceFile", "parserClause", "importDecl", "importSpec", "importPath",
	"string_", "statementList", "statement", "shortVarDecl", "expressionList",
	"identifierList", "pipe", "pipeUnit", "pipeUnitIdentifers", "pipeUnitExpression",
	"expression", "primaryExpr", "operand", "literal", "functionCall", "arguments",
	"basicLit", "operandName", "unaryExpr", "sliceValue", "sliceValueSingleLine",
	"sliceValueMultiLine", "sliceValueMultiLineLine", "messageValue", "keyedElementKV",
	"keyedElementIdentifer", "keyedElement", "messageValueSingleLine", "messageValueMultiLine",
	"lineKeyedElement", "key", "element", "sliceType", "typeT", "typeName",
	"typeLit", "interfaceType", "fieldDecl", "integer", "eos",
}

type Pipe4Parser struct {
	Pipe4ParserBase
}

// NewPipe4Parser produces a new parser instance for the optional input antlr.TokenStream.
//
// The *Pipe4Parser instance produced may be reused by calling the SetInputStream method.
// The initial parser configuration is expensive to construct, and the object is not thread-safe;
// however, if used within a Golang sync.Pool, the construction cost amortizes well and the
// objects can be used in a thread-safe manner.
func NewPipe4Parser(input antlr.TokenStream) *Pipe4Parser {
	this := new(Pipe4Parser)
	deserializer := antlr.NewATNDeserializer(nil)
	deserializedATN := deserializer.DeserializeFromUInt16(parserATN)
	decisionToDFA := make([]*antlr.DFA, len(deserializedATN.DecisionToState))
	for index, ds := range deserializedATN.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(ds, index)
	}
	this.BaseParser = antlr.NewBaseParser(input)

	this.Interpreter = antlr.NewParserATNSimulator(this, deserializedATN, decisionToDFA, antlr.NewPredictionContextCache())
	this.RuleNames = ruleNames
	this.LiteralNames = literalNames
	this.SymbolicNames = symbolicNames
	this.GrammarFileName = "Pipe4Parser.g4"

	return this
}

// Pipe4Parser tokens.
const (
	Pipe4ParserEOF                    = antlr.TokenEOF
	Pipe4ParserINTERFACE              = 1
	Pipe4ParserSTRUCT                 = 2
	Pipe4ParserPARSER                 = 3
	Pipe4ParserIMPORT                 = 4
	Pipe4ParserIDENTIFIER             = 5
	Pipe4ParserL_PAREN                = 6
	Pipe4ParserR_PAREN                = 7
	Pipe4ParserL_CURLY                = 8
	Pipe4ParserR_CURLY                = 9
	Pipe4ParserL_BRACKET              = 10
	Pipe4ParserR_BRACKET              = 11
	Pipe4ParserASSIGN                 = 12
	Pipe4ParserCOMMA                  = 13
	Pipe4ParserSEMI                   = 14
	Pipe4ParserCOLON                  = 15
	Pipe4ParserDOT                    = 16
	Pipe4ParserPLUS_PLUS              = 17
	Pipe4ParserMINUS_MINUS            = 18
	Pipe4ParserDECLARE_ASSIGN         = 19
	Pipe4ParserELLIPSIS               = 20
	Pipe4ParserLOGICAL_OR             = 21
	Pipe4ParserLOGICAL_AND            = 22
	Pipe4ParserEQUALS                 = 23
	Pipe4ParserNOT_EQUALS             = 24
	Pipe4ParserLESS                   = 25
	Pipe4ParserLESS_OR_EQUALS         = 26
	Pipe4ParserGREATER                = 27
	Pipe4ParserGREATER_OR_EQUALS      = 28
	Pipe4ParserOR                     = 29
	Pipe4ParserDIV                    = 30
	Pipe4ParserEXCLAMATION            = 31
	Pipe4ParserPLUS                   = 32
	Pipe4ParserUNARY_MINUS            = 33
	Pipe4ParserMINUS                  = 34
	Pipe4ParserMINUS_IN_NAME          = 35
	Pipe4ParserSTAR                   = 36
	Pipe4ParserDECIMAL_LIT            = 37
	Pipe4ParserBINARY_LIT             = 38
	Pipe4ParserOCTAL_LIT              = 39
	Pipe4ParserHEX_LIT                = 40
	Pipe4ParserFLOAT_LIT              = 41
	Pipe4ParserDECIMAL_FLOAT_LIT      = 42
	Pipe4ParserHEX_FLOAT_LIT          = 43
	Pipe4ParserRUNE_LIT               = 44
	Pipe4ParserBYTE_VALUE             = 45
	Pipe4ParserOCTAL_BYTE_VALUE       = 46
	Pipe4ParserHEX_BYTE_VALUE         = 47
	Pipe4ParserLITTLE_U_VALUE         = 48
	Pipe4ParserBIG_U_VALUE            = 49
	Pipe4ParserRAW_STRING_LIT         = 50
	Pipe4ParserINTERPRETED_STRING_LIT = 51
	Pipe4ParserWS                     = 52
	Pipe4ParserCOMMENT                = 53
	Pipe4ParserTERMINATOR             = 54
	Pipe4ParserLINE_COMMENT           = 55
)

// Pipe4Parser rules.
const (
	Pipe4ParserRULE_sourceFile              = 0
	Pipe4ParserRULE_parserClause            = 1
	Pipe4ParserRULE_importDecl              = 2
	Pipe4ParserRULE_importSpec              = 3
	Pipe4ParserRULE_importPath              = 4
	Pipe4ParserRULE_string_                 = 5
	Pipe4ParserRULE_statementList           = 6
	Pipe4ParserRULE_statement               = 7
	Pipe4ParserRULE_shortVarDecl            = 8
	Pipe4ParserRULE_expressionList          = 9
	Pipe4ParserRULE_identifierList          = 10
	Pipe4ParserRULE_pipe                    = 11
	Pipe4ParserRULE_pipeUnit                = 12
	Pipe4ParserRULE_pipeUnitIdentifers      = 13
	Pipe4ParserRULE_pipeUnitExpression      = 14
	Pipe4ParserRULE_expression              = 15
	Pipe4ParserRULE_primaryExpr             = 16
	Pipe4ParserRULE_operand                 = 17
	Pipe4ParserRULE_literal                 = 18
	Pipe4ParserRULE_functionCall            = 19
	Pipe4ParserRULE_arguments               = 20
	Pipe4ParserRULE_basicLit                = 21
	Pipe4ParserRULE_operandName             = 22
	Pipe4ParserRULE_unaryExpr               = 23
	Pipe4ParserRULE_sliceValue              = 24
	Pipe4ParserRULE_sliceValueSingleLine    = 25
	Pipe4ParserRULE_sliceValueMultiLine     = 26
	Pipe4ParserRULE_sliceValueMultiLineLine = 27
	Pipe4ParserRULE_messageValue            = 28
	Pipe4ParserRULE_keyedElementKV          = 29
	Pipe4ParserRULE_keyedElementIdentifer   = 30
	Pipe4ParserRULE_keyedElement            = 31
	Pipe4ParserRULE_messageValueSingleLine  = 32
	Pipe4ParserRULE_messageValueMultiLine   = 33
	Pipe4ParserRULE_lineKeyedElement        = 34
	Pipe4ParserRULE_key                     = 35
	Pipe4ParserRULE_element                 = 36
	Pipe4ParserRULE_sliceType               = 37
	Pipe4ParserRULE_typeT                   = 38
	Pipe4ParserRULE_typeName                = 39
	Pipe4ParserRULE_typeLit                 = 40
	Pipe4ParserRULE_interfaceType           = 41
	Pipe4ParserRULE_fieldDecl               = 42
	Pipe4ParserRULE_integer                 = 43
	Pipe4ParserRULE_eos                     = 44
)

// ISourceFileContext is an interface to support dynamic dispatch.
type ISourceFileContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsSourceFileContext differentiates from other interfaces.
	IsSourceFileContext()
}

type SourceFileContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptySourceFileContext() *SourceFileContext {
	var p = new(SourceFileContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = Pipe4ParserRULE_sourceFile
	return p
}

func (*SourceFileContext) IsSourceFileContext() {}

func NewSourceFileContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *SourceFileContext {
	var p = new(SourceFileContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = Pipe4ParserRULE_sourceFile

	return p
}

func (s *SourceFileContext) GetParser() antlr.Parser { return s.parser }

func (s *SourceFileContext) EOF() antlr.TerminalNode {
	return s.GetToken(Pipe4ParserEOF, 0)
}

func (s *SourceFileContext) ParserClause() IParserClauseContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IParserClauseContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IParserClauseContext)
}

func (s *SourceFileContext) AllEos() []IEosContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IEosContext)(nil)).Elem())
	var tst = make([]IEosContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IEosContext)
		}
	}

	return tst
}

func (s *SourceFileContext) Eos(i int) IEosContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IEosContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IEosContext)
}

func (s *SourceFileContext) AllImportDecl() []IImportDeclContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IImportDeclContext)(nil)).Elem())
	var tst = make([]IImportDeclContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IImportDeclContext)
		}
	}

	return tst
}

func (s *SourceFileContext) ImportDecl(i int) IImportDeclContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IImportDeclContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IImportDeclContext)
}

func (s *SourceFileContext) StatementList() IStatementListContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IStatementListContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IStatementListContext)
}

func (s *SourceFileContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *SourceFileContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *SourceFileContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(Pipe4ParserListener); ok {
		listenerT.EnterSourceFile(s)
	}
}

func (s *SourceFileContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(Pipe4ParserListener); ok {
		listenerT.ExitSourceFile(s)
	}
}

func (s *SourceFileContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case Pipe4ParserVisitor:
		return t.VisitSourceFile(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *Pipe4Parser) SourceFile() (localctx ISourceFileContext) {
	localctx = NewSourceFileContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, Pipe4ParserRULE_sourceFile)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	p.SetState(93)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == Pipe4ParserPARSER {
		{
			p.SetState(90)
			p.ParserClause()
		}
		{
			p.SetState(91)
			p.Eos()
		}

	}
	p.SetState(100)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for _la == Pipe4ParserIMPORT {
		{
			p.SetState(95)
			p.ImportDecl()
		}
		{
			p.SetState(96)
			p.Eos()
		}

		p.SetState(102)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}
	p.SetState(104)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == Pipe4ParserINTERFACE || _la == Pipe4ParserIDENTIFIER {
		{
			p.SetState(103)
			p.StatementList()
		}

	}
	{
		p.SetState(106)
		p.Match(Pipe4ParserEOF)
	}

	return localctx
}

// IParserClauseContext is an interface to support dynamic dispatch.
type IParserClauseContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// GetParserPath returns the parserPath rule contexts.
	GetParserPath() IString_Context

	// SetParserPath sets the parserPath rule contexts.
	SetParserPath(IString_Context)

	// IsParserClauseContext differentiates from other interfaces.
	IsParserClauseContext()
}

type ParserClauseContext struct {
	*antlr.BaseParserRuleContext
	parser     antlr.Parser
	parserPath IString_Context
}

func NewEmptyParserClauseContext() *ParserClauseContext {
	var p = new(ParserClauseContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = Pipe4ParserRULE_parserClause
	return p
}

func (*ParserClauseContext) IsParserClauseContext() {}

func NewParserClauseContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ParserClauseContext {
	var p = new(ParserClauseContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = Pipe4ParserRULE_parserClause

	return p
}

func (s *ParserClauseContext) GetParser() antlr.Parser { return s.parser }

func (s *ParserClauseContext) GetParserPath() IString_Context { return s.parserPath }

func (s *ParserClauseContext) SetParserPath(v IString_Context) { s.parserPath = v }

func (s *ParserClauseContext) PARSER() antlr.TerminalNode {
	return s.GetToken(Pipe4ParserPARSER, 0)
}

func (s *ParserClauseContext) String_() IString_Context {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IString_Context)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IString_Context)
}

func (s *ParserClauseContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ParserClauseContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ParserClauseContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(Pipe4ParserListener); ok {
		listenerT.EnterParserClause(s)
	}
}

func (s *ParserClauseContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(Pipe4ParserListener); ok {
		listenerT.ExitParserClause(s)
	}
}

func (s *ParserClauseContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case Pipe4ParserVisitor:
		return t.VisitParserClause(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *Pipe4Parser) ParserClause() (localctx IParserClauseContext) {
	localctx = NewParserClauseContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, Pipe4ParserRULE_parserClause)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(108)
		p.Match(Pipe4ParserPARSER)
	}
	{
		p.SetState(109)

		var _x = p.String_()

		localctx.(*ParserClauseContext).parserPath = _x
	}

	return localctx
}

// IImportDeclContext is an interface to support dynamic dispatch.
type IImportDeclContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsImportDeclContext differentiates from other interfaces.
	IsImportDeclContext()
}

type ImportDeclContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyImportDeclContext() *ImportDeclContext {
	var p = new(ImportDeclContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = Pipe4ParserRULE_importDecl
	return p
}

func (*ImportDeclContext) IsImportDeclContext() {}

func NewImportDeclContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ImportDeclContext {
	var p = new(ImportDeclContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = Pipe4ParserRULE_importDecl

	return p
}

func (s *ImportDeclContext) GetParser() antlr.Parser { return s.parser }

func (s *ImportDeclContext) IMPORT() antlr.TerminalNode {
	return s.GetToken(Pipe4ParserIMPORT, 0)
}

func (s *ImportDeclContext) AllImportSpec() []IImportSpecContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IImportSpecContext)(nil)).Elem())
	var tst = make([]IImportSpecContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IImportSpecContext)
		}
	}

	return tst
}

func (s *ImportDeclContext) ImportSpec(i int) IImportSpecContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IImportSpecContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IImportSpecContext)
}

func (s *ImportDeclContext) L_PAREN() antlr.TerminalNode {
	return s.GetToken(Pipe4ParserL_PAREN, 0)
}

func (s *ImportDeclContext) R_PAREN() antlr.TerminalNode {
	return s.GetToken(Pipe4ParserR_PAREN, 0)
}

func (s *ImportDeclContext) AllEos() []IEosContext {
	var ts = s.GetTypedRuleContexts(reflect.TypeOf((*IEosContext)(nil)).Elem())
	var tst = make([]IEosContext, len(ts))

	for i, t := range ts {
		if t != nil {
			tst[i] = t.(IEosContext)
		}
	}

	return tst
}

func (s *ImportDeclContext) Eos(i int) IEosContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IEosContext)(nil)).Elem(), i)

	if t == nil {
		return nil
	}

	return t.(IEosContext)
}

func (s *ImportDeclContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ImportDeclContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ImportDeclContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(Pipe4ParserListener); ok {
		listenerT.EnterImportDecl(s)
	}
}

func (s *ImportDeclContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(Pipe4ParserListener); ok {
		listenerT.ExitImportDecl(s)
	}
}

func (s *ImportDeclContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case Pipe4ParserVisitor:
		return t.VisitImportDecl(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *Pipe4Parser) ImportDecl() (localctx IImportDeclContext) {
	localctx = NewImportDeclContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, Pipe4ParserRULE_importDecl)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(111)
		p.Match(Pipe4ParserIMPORT)
	}
	p.SetState(123)
	p.GetErrorHandler().Sync(p)

	switch p.GetTokenStream().LA(1) {
	case Pipe4ParserIDENTIFIER, Pipe4ParserDOT, Pipe4ParserRAW_STRING_LIT, Pipe4ParserINTERPRETED_STRING_LIT:
		{
			p.SetState(112)
			p.ImportSpec()
		}

	case Pipe4ParserL_PAREN:
		{
			p.SetState(113)
			p.Match(Pipe4ParserL_PAREN)
		}
		p.SetState(119)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)

		for _la == Pipe4ParserIDENTIFIER || _la == Pipe4ParserDOT || _la == Pipe4ParserRAW_STRING_LIT || _la == Pipe4ParserINTERPRETED_STRING_LIT {
			{
				p.SetState(114)
				p.ImportSpec()
			}
			{
				p.SetState(115)
				p.Eos()
			}

			p.SetState(121)
			p.GetErrorHandler().Sync(p)
			_la = p.GetTokenStream().LA(1)
		}
		{
			p.SetState(122)
			p.Match(Pipe4ParserR_PAREN)
		}

	default:
		panic(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
	}

	return localctx
}

// IImportSpecContext is an interface to support dynamic dispatch.
type IImportSpecContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// GetAlias returns the alias token.
	GetAlias() antlr.Token

	// SetAlias sets the alias token.
	SetAlias(antlr.Token)

	// IsImportSpecContext differentiates from other interfaces.
	IsImportSpecContext()
}

type ImportSpecContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
	alias  antlr.Token
}

func NewEmptyImportSpecContext() *ImportSpecContext {
	var p = new(ImportSpecContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = Pipe4ParserRULE_importSpec
	return p
}

func (*ImportSpecContext) IsImportSpecContext() {}

func NewImportSpecContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ImportSpecContext {
	var p = new(ImportSpecContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = Pipe4ParserRULE_importSpec

	return p
}

func (s *ImportSpecContext) GetParser() antlr.Parser { return s.parser }

func (s *ImportSpecContext) GetAlias() antlr.Token { return s.alias }

func (s *ImportSpecContext) SetAlias(v antlr.Token) { s.alias = v }

func (s *ImportSpecContext) ImportPath() IImportPathContext {
	var t = s.GetTypedRuleContext(reflect.TypeOf((*IImportPathContext)(nil)).Elem(), 0)

	if t == nil {
		return nil
	}

	return t.(IImportPathContext)
}

func (s *ImportSpecContext) DOT() antlr.TerminalNode {
	return s.GetToken(Pipe4ParserDOT, 0)
}

func (s *ImportSpecContext) IDENTIFIER() antlr.TerminalNode {
	return s.GetToken(Pipe4ParserIDENTIFIER, 0)
}

func (s *ImportSpecContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ImportSpecContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ImportSpecContext) EnterRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(Pipe4ParserListener); ok {
		listenerT.EnterImportSpec(s)
	}
}

func (s *ImportSpecContext) ExitRule(listener antlr.ParseTreeListener) {
	if listenerT, ok := listener.(Pipe4ParserListener); ok {
		listenerT.ExitImportSpec(s)
	}
}

func (s *ImportSpecContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case Pipe4ParserVisitor:
		return t.VisitImportSpec(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *Pipe4Parser) ImportSpec() (localctx IImportSpecContext) {
	localctx = NewImportSpecContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, Pipe4ParserRULE_importSpec)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	p.SetState(126)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == Pipe4ParserIDENTIFIER || _la == Pipe4ParserDOT {
		{
			p.SetState(125)

			var _lt = p.GetTokenStream().LT(1)

			localctx.(*ImportSpecContext).alias = _lt

			_la = p.GetTokenStream().LA(1)

			if !(_la == Pipe4ParserIDENTIFIER || _la == Pipe4ParserDOT) {
				var _ri = p.GetErrorHandler().RecoverInline(p)

				localctx.(*ImportSpecContext).alias = _ri
			} else {
				p.GetErrorHandler().ReportMatch(p)
				p.Consume()
			}
		}

	}
	{
		p.SetState(128)
		p.ImportPath()
	}

	return localctx
}

// IImportPathContext is an interface to support dynamic dispatch.
type IImportPathContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// IsImportPathContext differentiates from other interfaces.
	IsImportPathContext()
}

type ImportPathContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyImportPathContext() *ImportPathContext {
	var p = new(ImportPathContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = Pipe4ParserRULE_importPath
	return p
}

func (*ImportPathContext) IsImportPathContext() {}

func NewImportPathContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ImportPathContext {
	var p = new(ImportPathContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = Pipe4ParserRULE_importPath

	return p
}

func (s *ImportPathContext) GetParser() antlr.Parser { return s.parser }
